<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_diagnose"
        android:icon="@drawable/ic_diagnose"
        android:title="@string/diagnose"/>
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/nav_garden"
        android:icon="@drawable/ic_my_garden"
        android:title="@string/my_garden"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu> 